# novashell

./: Cargo.toml  README.md  install.sh  nova.service  novashell.service
default_config/: config.yaml  style.css
default_config/examples/: catppuccin-full.yaml  minimal.yaml  tokyo-night-full.yaml
default_config/themes/: catppuccin-glass.css  dracula-neon.css  ghost.css  gruvbox-warm.css  nord-ice.css  rose-pine.css  tokyo-night.css
docs/: ARCHITECTURE.md  MILESTONES.md  WIDGET_API.md
examples/full-rice/: config.yaml  style.css
examples/minimal/: config.yaml  style.css
plugin_example/: Cargo.toml
plugin_example/src/: lib.rs
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  schema.rs  watcher.rs
src/css/: mod.rs
src/ipc/: mod.rs  protocol.rs  server.rs
src/plugin/: api.rs  loader.rs  mod.rs
src/renderer/: layer.rs  mod.rs  widget_factory.rs  window.rs
src/state/: mod.rs
src/widgets/: battery.rs  cava.rs  clock.rs  exec.rs  launcher.rs  media.rs  mod.rs  sysmon.rs  traits.rs  volume.rs
widgets/: battery.widget  cava.widget  clock.widget  launcher.widget  media.widget  sysmon.widget  volume.widget
widgets/custom/: cpu_graph.widget  gpu_usage.widget  kernel.widget  network_ssid.widget  pacman_updates.widget  spotify.widget  uptime.widget  weather.widget  workspace.widget
