[package]
name = "novashell"
version = "0.1.0"
edition = "2021"
authors = ["NovaShell Contributors"]
description = "A modular, composable Linux desktop ricing engine"
license = "MIT"
repository = "https://github.com/novashell/novashell"
keywords = ["wayland", "desktop", "ricing", "widgets", "gtk"]

[[bin]]
name = "nova"
path = "src/main.rs"

[lib]
name = "novashell_lib"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# GTK4 rendering stack
# gtk4-layer-shell 0.8 links against gtk4-sys 0.11 — all crates must align
gtk4 = { version = "0.11", features = ["v4_10"] }
gtk4-layer-shell = "0.8"
glib = "0.22"
gio = "0.22"
gdk4 = "0.11"
cairo-rs = { version = "0.22", features = ["use_glib"] }
pango = "0.22"
pangocairo = "0.22"

# File watching (hot-reload)
notify = "6"

# System monitoring
sysinfo = "0.30"

# D-Bus / MPRIS2
zbus = { version = "4", features = ["tokio"] }
zvariant = "4"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time / date
chrono = { version = "0.4", features = ["unstable-locales"] }

# String / template utilities
regex = "1"
once_cell = "1"

# XML template parser for widget templates
quick-xml = "0.31"

# Plugin loading
libloading = "0.8"

# Utilities
dirs = "5"
indexmap = { version = "2", features = ["serde"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
futures = "0.3"
libc = "0.2"

[features]
default = ["wayland"]
wayland = []
x11 = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
